<resources>
    <string name="app_name">Shopping List</string>
    <string name="bought">Bought</string>

    <string name="name">Name</string>
    <string name="description">Description</string>
    <string name="category">Category</string>
    <string name="estimated_price">Estimated Price</string>
    <string name="already_purchased">Already purchased</string>
    <string name="new_shopping_item">New Shopping Item</string>
    <string name="button_ok">OK</string>
    <string name="button_cancel">Cancel</string>
    <string name="deleteAll">Delete All</string>

    <string-array name="category_items">
        <item>Food</item>
        <item>Electronic</item>
        <item>Book</item>
    </string-array>
</resources>
